[package]
name = "mio-epoll-example"
version = "0.1.0"
edition = "2021"

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"], default-features = false }
signal-hook = { version = "0.3", features = ["iterator"], default-features = false }
log = { version = "0.4", features = ["kv_unstable"], default-features = false }
env_logger = { version = "0.10", features = ["auto-color", "humantime"], default-features = false }
